--- a/gst-plugins-base/po/bg.po
+++ b/gst-plugins-base/po/bg.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
+"Project-Id-Version: gst-plugins-base 0.10.24.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-09-17 00:08+0100\n"
-"PO-Revision-Date: 2009-05-15 22:41+0300\n"
+"POT-Creation-Date: 2009-10-01 16:27+0100\n"
+"PO-Revision-Date: 2009-09-19 12:14+0300\n"
 "Last-Translator: Alexander Shopov <ash@contact.bg>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "MIME-Version: 1.0\n"
@@ -126,9 +126,8 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Това изглежда е текстов файл"
 
-#, fuzzy
 msgid "Could not determine type of stream"
-msgstr "Не може да се създаде елемент „typefind“."
+msgstr "Видът на потока не може да бъде определен"
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
@@ -172,34 +171,28 @@ msgid "A subtitle stream was detected, but no video stream."
 msgstr "Открит е поток със субтитри, липсва видео поток."
 
 msgid "Both autovideosink and xvimagesink elements are missing."
-msgstr ""
-"Едновременно липсват елементите-приемници „autovideosink“ и „xvimagesink“."
+msgstr "Едновременно липсват елементите „autovideosink“ и „xvimagesink“."
 
 #, c-format
 msgid "Missing element '%s' - check your GStreamer installation."
 msgstr "Елементът „%s“ липсва — проверете инсталацията на GStreamer."
 
 msgid "Both autoaudiosink and alsasink elements are missing."
-msgstr ""
-"Едновременно липсват елементите-приемници „autoaudiosink“ и „alsasink“."
+msgstr "Едновременно липсват елементите „autoaudiosink“ и „alsasink“."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are missing."
-msgstr ""
-"Едновременно липсват елементите-приемници „autovideosink“ и „xvimagesink“."
+msgstr "Едновременно липсват елементите „autovideosink“ и „%s“."
 
-#, fuzzy
 msgid "The autovideosink element is missing."
-msgstr ""
-"Едновременно липсват елементите-приемници „autovideosink“ и „xvimagesink“."
+msgstr "Липсва елементът „autovideosink“."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are not working."
-msgstr "И двата елемента-приемници „autovideosink“ и „xvimagesink“ не работят."
+msgstr "Едновременно не работят елементите „autovideosink“ и „%s“."
 
-#, fuzzy
 msgid "The autovideosink element is not working."
-msgstr "И двата елемента-приемници „autovideosink“ и „xvimagesink“ не работят."
+msgstr "Елементът „autovideosink“ не работи."
 
 msgid "Custom text sink element is not usable."
 msgstr "Потребителският елемент-приемник за текст е неизползваем."
@@ -207,44 +200,38 @@ msgstr "Потребителският елемент-приемник за те
 msgid "No volume control found"
 msgstr "Липсва управление на силата на звука"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are missing."
-msgstr ""
-"Едновременно липсват елементите-приемници „autoaudiosink“ и „alsasink“."
+msgstr "Едновременно липсват елементите „autoaudiosink“ и „%s“."
 
-#, fuzzy
 msgid "The autoaudiosink element is missing."
-msgstr ""
-"Едновременно липсват елементите-приемници „autoaudiosink“ и „alsasink“."
+msgstr "Липсва елементът „autoaudiosink“."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are not working."
-msgstr "И двата елемента-приемници „autoaudiosink“ и „alsasink“ не работят."
+msgstr "Едновремено не работят елементите „autoaudiosink“ и „%s“."
 
-#, fuzzy
 msgid "The autoaudiosink element is not working."
-msgstr "И двата елемента-приемници „autoaudiosink“ и „alsasink“ не работят."
+msgstr "Елементът „autoaudiosink“ не работи."
 
 msgid "Can't play a text file without video."
 msgstr "Не може да се изпълни текстов файл без видео."
 
-#, fuzzy
 msgid "Can't display both text subtitles and subpictures."
-msgstr "Не може да се изпълнят текстови субтитри и подизображения."
+msgstr ""
+"Не може да се показват едновременно текстови субтитри и подизображения."
 
-#, fuzzy
 msgid "No Temp directory specified."
-msgstr "Не е указано устройство."
+msgstr "Не е указана временна директория."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Файлът „%s“ от виртуалната файлова система не може да се затвори."
+msgstr "Временният файл „%s“ не може да бъде създаден."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Файлът „%s“ не може да се отвори за четене."
 
-#, fuzzy
 msgid "Internal data flow error."
 msgstr "Вътрешна грешка на потока от данни."
 
@@ -515,6 +502,3 @@ msgstr "Устройството „%s“ вече се използва."
 #, c-format
 msgid "Could not open device \"%s\" for reading and writing."
 msgstr "Устройството „%s“ не може да се отвори за четене и запис."
-
-#~ msgid "No file name specified."
-#~ msgstr "Не е указано име на файл."
