--- a/gst-plugins-base/po/cs.po
+++ b/gst-plugins-base/po/cs.po
@@ -4,20 +4,18 @@
 # This file is put in the public domain.
 # Miloslav Trmac <mitr@volny.cz>, 2004.
 # Petr Kovar <pknbe@volny.cz>, 2007, 2008, 2009.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base-0.10.22.2\n"
+"Project-Id-Version: gst-plugins-base-0.10.24.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-09-17 00:08+0100\n"
-"PO-Revision-Date: 2009-04-27 22:31+0200\n"
+"POT-Creation-Date: 2009-10-01 16:27+0100\n"
+"PO-Revision-Date: 2009-09-21 01:21+0200\n"
 "Last-Translator: Petr Kovar <pknbe@volny.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: KBabel 1.11.4\n"
 
 msgid "Master"
 msgstr "Master"
@@ -128,9 +126,8 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Zdá se, že se jedná o textový soubor"
 
-#, fuzzy
 msgid "Could not determine type of stream"
-msgstr "Nezdařilo se vytvoření prvku \"typefind\"."
+msgstr "Nezdařilo se určit typ proudu"
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
@@ -183,21 +180,19 @@ msgstr "Schází prvek \"%s\" - zkontrolujte prosím instalaci systému GStreame
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Schází jak prvek autoaudiosink, tak alsasink."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are missing."
-msgstr "Schází jak prvek autovideosink, tak xvimagesink."
+msgstr "Schází jak prvek autovideosink, tak %s."
 
-#, fuzzy
 msgid "The autovideosink element is missing."
-msgstr "Schází jak prvek autovideosink, tak xvimagesink."
+msgstr "Schází prvek autovideosink."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are not working."
-msgstr "Nefunguje ani prvek autovideosink, ani xvimagesink."
+msgstr "Nefunguje ani prvek autovideosink, ani %s."
 
-#, fuzzy
 msgid "The autovideosink element is not working."
-msgstr "Nefunguje ani prvek autovideosink, ani xvimagesink."
+msgstr "Nefunguje prvek autovideosink."
 
 msgid "Custom text sink element is not usable."
 msgstr "Vlastní prvek kanálu textu není použitelný."
@@ -205,44 +200,39 @@ msgstr "Vlastní prvek kanálu textu není použitelný."
 msgid "No volume control found"
 msgstr "Nenalezeno žádné ovládání hlasitosti"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are missing."
-msgstr "Schází jak prvek autoaudiosink, tak alsasink."
+msgstr "Schází jak prvek autoaudiosink, tak %s."
 
-#, fuzzy
 msgid "The autoaudiosink element is missing."
-msgstr "Schází jak prvek autoaudiosink, tak alsasink."
+msgstr "Schází prvek autoaudiosink."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are not working."
-msgstr "Nefunguje ani prvek autoaudiosink, ani alsasink."
+msgstr "Nefunguje ani prvek autoaudiosink, ani %s."
 
-#, fuzzy
 msgid "The autoaudiosink element is not working."
-msgstr "Nefunguje ani prvek autoaudiosink, ani alsasink."
+msgstr "Nefunguje prvek autoaudiosink."
 
 msgid "Can't play a text file without video."
 msgstr "Textový soubor nelze přehrát bez videa."
 
-#, fuzzy
 msgid "Can't display both text subtitles and subpictures."
-msgstr "Textové titulky ani podřazené obrázky nelze přehrát."
+msgstr "Textové titulky ani podřazené obrázky nelze zobrazit."
 
-#, fuzzy
 msgid "No Temp directory specified."
-msgstr "Nezadáno zařízení."
+msgstr "Nezadán žádný adresář Temp."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Nezdařilo se zavření souboru vfs \"%s\"."
+msgstr "Nezdařilo se vytvoření dočasného souboru \"%s\"."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Nezdařilo se otevření souboru \"%s\" ke čtení."
 
-#, fuzzy
 msgid "Internal data flow error."
-msgstr "Vnitřní chyba datového proudu."
+msgstr "Vnitřní chyba datového toku."
 
 #, c-format
 msgid "No decoder available for type '%s'."
@@ -511,6 +501,3 @@ msgstr "Zařízení \"%s\" je již používáno."
 #, c-format
 msgid "Could not open device \"%s\" for reading and writing."
 msgstr "Zařízení \"%s\" se nezdařilo otevřít ke čtení a k zápisu."
-
-#~ msgid "No file name specified."
-#~ msgstr "Nezadán název souboru."
