--- a/gst-plugins-base/po/da.po
+++ b/gst-plugins-base/po/da.po
@@ -7,10 +7,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
+"Project-Id-Version: gst-plugins-base 0.10.24.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-09-17 00:08+0100\n"
-"PO-Revision-Date: 2009-07-19 16:38+0100\n"
+"POT-Creation-Date: 2009-10-01 16:27+0100\n"
+"PO-Revision-Date: 2009-09-17 16:38+0100\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "MIME-Version: 1.0\n"
@@ -60,6 +60,7 @@ msgstr "Kunne ikke afspille fra enheden i stereo-tilstand."
 msgid "Could not open device for playback in %d-channel mode."
 msgstr "Kunne ikke afspille fra enheden i %d-kanals-tilstand."
 
+# måske bruges af et andet program.
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
 "application."
@@ -124,9 +125,8 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Denne fremstår som en tekstfil"
 
-#, fuzzy
 msgid "Could not determine type of stream"
-msgstr "Kunne ikke danne et \"typefind\" element."
+msgstr "Kunne ikke afgøre strømtypen"
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
@@ -179,21 +179,19 @@ msgstr "'%s' elementet mangler - check din GStreamer installation."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Både autoaudiosink og alsasink elementerne mangler."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are missing."
-msgstr "Både autovideosink og xvimagesink elementerne mangler."
+msgstr "Både autovideosink og %s elementer mangler."
 
-#, fuzzy
 msgid "The autovideosink element is missing."
-msgstr "Både autovideosink og xvimagesink elementerne mangler."
+msgstr "Elementet autovideosink mangler."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are not working."
-msgstr "Både autovideosink- og xvimagesinkelementerne virker ikke."
+msgstr "Både autovideosink og %s elementerne virker ikke."
 
-#, fuzzy
 msgid "The autovideosink element is not working."
-msgstr "Både autovideosink- og xvimagesinkelementerne virker ikke."
+msgstr "Elementet autovideosink virker ikke."
 
 msgid "Custom text sink element is not usable."
 msgstr "Brugertilpasset tekstsinkelement er ikke brugbart."
@@ -201,42 +199,37 @@ msgstr "Brugertilpasset tekstsinkelement er ikke brugbart."
 msgid "No volume control found"
 msgstr "Ingen lydstyrkekontrol fundet"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are missing."
-msgstr "Både autoaudiosink og alsasink elementerne mangler."
+msgstr "Både autoaudiosink og %s elementerne mangler."
 
-#, fuzzy
 msgid "The autoaudiosink element is missing."
-msgstr "Både autoaudiosink og alsasink elementerne mangler."
+msgstr "Elementet autoaudiosink mangler."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are not working."
-msgstr "Både autoaudiosink- og alsasinkelementerne virker ikke."
+msgstr "Både autoaudiosink og  %s elementerne virker ikke."
 
-#, fuzzy
 msgid "The autoaudiosink element is not working."
-msgstr "Både autoaudiosink- og alsasinkelementerne virker ikke."
+msgstr "Elementet autoaudiosink virker ikke."
 
 msgid "Can't play a text file without video."
 msgstr "Kan ikke afspille en tekstfil uden video."
 
-#, fuzzy
 msgid "Can't display both text subtitles and subpictures."
-msgstr "Kan ikke afspille en undertekst og underbilleder."
+msgstr "Kan ikke vise både undertekster og underbilleder."
 
-#, fuzzy
 msgid "No Temp directory specified."
-msgstr "Ingen enhed angivet."
+msgstr "Ingen midlertidig mappe angivet."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Kunne ikke lukke vfs-filen \"%s\"."
+msgstr "Kunne ikke oprette midlertidig fil \"%s\"."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Kunne ikke åbne fil \"%s\" til læsning."
 
-#, fuzzy
 msgid "Internal data flow error."
 msgstr "Intern datastrømsfejl."
 
@@ -245,12 +238,15 @@ msgid "No decoder available for type '%s'."
 msgstr "Ingen dekoder tilgængelig for type '%s'."
 
 msgid "This stream type cannot be played yet."
-msgstr "Denne strømtype kan ikke afspilles endnu."
+msgstr "Denne type lydstrøm kan ikke afspilles endnu."
 
+# har beholdt »er«
 #, c-format
 msgid "No URI handler implemented for \"%s\"."
 msgstr "Ingen URI-håndtering er implementeret for \"%s\"."
 
+# eller oprette (evt. sammensat).
+# beholdt danne og ikke sammensat da tillægsord.
 msgid "Could not create \"decodebin2\" element."
 msgstr "Kunne ikke danne et \"decodebin2\" element."
 
@@ -394,9 +390,11 @@ msgstr "Ukomprimeret sort og hvid Y-plan"
 msgid "Uncompressed YUV"
 msgstr "Ukomprimeret YUV"
 
+# Findes dette ord palettet på dansk ? evt. indekseret
+# Ukomprimeret palettet %d-bit %s
 #, c-format
 msgid "Uncompressed palettized %d-bit %s"
-msgstr "Ukomprimeret palettet %d-bit %s"
+msgstr "Ukomprimeret indekseret %d-bit %s"
 
 #, c-format
 msgid "DivX MPEG-4 Version %d"
@@ -479,8 +477,9 @@ msgstr "GStreamer element %s"
 msgid "Unknown source element"
 msgstr "Ukendt kildeelement"
 
+# sink ? (afløb, kanal)
 msgid "Unknown sink element"
-msgstr "Ukendt sinkelement"
+msgstr "Ukendt afløbselement"
 
 msgid "Unknown element"
 msgstr "Ukendt element"
