--- a/gst-plugins-base/po/fr.po
+++ b/gst-plugins-base/po/fr.po
@@ -7,10 +7,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
+"Project-Id-Version: gst-plugins-base 0.10.24.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-09-17 00:08+0100\n"
-"PO-Revision-Date: 2009-05-21 11:10+0200\n"
+"POT-Creation-Date: 2009-10-01 16:27+0100\n"
+"PO-Revision-Date: 2009-09-22 19:21+0200\n"
 "Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -131,9 +131,8 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Ce fichier semble être un fichier texte"
 
-#, fuzzy
 msgid "Could not determine type of stream"
-msgstr "Impossible de créer un élément « typefind »."
+msgstr "Impossible de déterminer le type de flux"
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
@@ -186,21 +185,19 @@ msgstr "Élément « %s » manquant, contrôlez votre installation de GStreame
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Les éléments autoaudiosink et alsasink sont tous deux manquants."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are missing."
-msgstr "Les éléments autovideosink et xvimagesink sont tous deux manquants."
+msgstr "Les éléments autovideosink et %s sont tous deux manquants."
 
-#, fuzzy
 msgid "The autovideosink element is missing."
-msgstr "Les éléments autovideosink et xvimagesink sont tous deux manquants."
+msgstr "L'élément autovideosink est manquant."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are not working."
-msgstr "Les éléments autovideosink et xvimagesink ne fonctionnent pas."
+msgstr "Les éléments autovideosink et %s ne fonctionnent pas."
 
-#, fuzzy
 msgid "The autovideosink element is not working."
-msgstr "Les éléments autovideosink et xvimagesink ne fonctionnent pas."
+msgstr "L'élément autovideosink ne fonctionne pas."
 
 msgid "Custom text sink element is not usable."
 msgstr "L'élément sink text personnalisé n'est pas utilisable."
@@ -208,42 +205,37 @@ msgstr "L'élément sink text personnalisé n'est pas utilisable."
 msgid "No volume control found"
 msgstr "Aucun contrôle de volume trouvé"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are missing."
-msgstr "Les éléments autoaudiosink et alsasink sont tous deux manquants."
+msgstr "Les éléments autoaudiosink et %s sont tous deux manquants."
 
-#, fuzzy
 msgid "The autoaudiosink element is missing."
-msgstr "Les éléments autoaudiosink et alsasink sont tous deux manquants."
+msgstr "L'élément autoaudiosink est manquant."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are not working."
-msgstr "Les éléments autoaudiosink et alsasink ne fonctionnent pas."
+msgstr "Les éléments autoaudiosink et %s ne fonctionnent pas."
 
-#, fuzzy
 msgid "The autoaudiosink element is not working."
-msgstr "Les éléments autoaudiosink et alsasink ne fonctionnent pas."
+msgstr "L'élément autoaudiosink ne fonctionne pas."
 
 msgid "Can't play a text file without video."
 msgstr "Impossible de lire un fichier texte sans vidéo."
 
-#, fuzzy
 msgid "Can't display both text subtitles and subpictures."
-msgstr "Impossible de lire des sous-titres et sous-images texte."
+msgstr "Impossible d'afficher à la fois des sous-titres et des sous-images."
 
-#, fuzzy
 msgid "No Temp directory specified."
-msgstr "Aucun périphérique indiqué."
+msgstr "Aucun répertoire temporaire indiqué."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Impossible de fermer le fichier vfs « %s »."
+msgstr "Impossible de créer le fichier temporaire « %s »."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Impossible d'ouvrir le fichier « %s » en lecture."
 
-#, fuzzy
 msgid "Internal data flow error."
 msgstr "Erreur interne de flux de données."
 
