--- a/gst-plugins-base/po/it.po
+++ b/gst-plugins-base/po/it.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
+"Project-Id-Version: gst-plugins-base 0.10.24.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-09-17 00:08+0100\n"
-"PO-Revision-Date: 2009-04-16 22:50+0200\n"
+"POT-Creation-Date: 2009-10-01 16:27+0100\n"
+"PO-Revision-Date: 2009-09-17 23:19+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -127,9 +127,8 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Questo sembra essere un file di testo"
 
-#, fuzzy
 msgid "Could not determine type of stream"
-msgstr "Impossibile creare l'elemento «typefind»."
+msgstr "Impossibile determinare il tipo di stream"
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
@@ -185,25 +184,19 @@ msgstr ""
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Risultano mancanti entrambi gli elementi «autoaudiosink» e «alsasink»."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are missing."
-msgstr ""
-"Risultano mancanti entrambi gli elementi «autovideosink» e «xvimagesink»."
+msgstr "Risultano mancanti entrambi gli elementi «autovideosink» e «%s»."
 
-#, fuzzy
 msgid "The autovideosink element is missing."
-msgstr ""
-"Risultano mancanti entrambi gli elementi «autovideosink» e «xvimagesink»."
+msgstr "Risulta mancante l'elemento «autovideosink»."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are not working."
-msgstr ""
-"Entrambi gli elementi «autovideosink» e «xvimagesink» non sono operativi."
+msgstr "Entrambi gli elementi «autovideosink» e «%s» non sono operativi."
 
-#, fuzzy
 msgid "The autovideosink element is not working."
-msgstr ""
-"Entrambi gli elementi «autovideosink» e «xvimagesink» non sono operativi."
+msgstr "L'elemento «autovideosink» non è operativo."
 
 msgid "Custom text sink element is not usable."
 msgstr "L'elemento sink di testo personalizzato non è utilizzabile."
@@ -211,21 +204,19 @@ msgstr "L'elemento sink di testo personalizzato non è utilizzabile."
 msgid "No volume control found"
 msgstr "Non è stato trovato alcun controllo del volume"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are missing."
-msgstr "Risultano mancanti entrambi gli elementi «autoaudiosink» e «alsasink»."
+msgstr "Risultano mancanti entrambi gli elementi «autoaudiosink» e «%s»."
 
-#, fuzzy
 msgid "The autoaudiosink element is missing."
-msgstr "Risultano mancanti entrambi gli elementi «autoaudiosink» e «alsasink»."
+msgstr "Risulta mancante l'elemento «autoaudiosink»."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are not working."
-msgstr "Entrambi gli elementi «autoaudiosink» e «alsasink» non sono operativi."
+msgstr "Entrambi gli elementi «autoaudiosink» e «%s» non sono operativi."
 
-#, fuzzy
 msgid "The autoaudiosink element is not working."
-msgstr "Entrambi gli elementi «autoaudiosink» e «alsasink» non sono operativi."
+msgstr "L'elemento «autoaudiosink» non è operativo."
 
 msgid "Can't play a text file without video."
 msgstr "Impossibile riprodurre un file di testo senza video."
@@ -234,23 +225,21 @@ msgstr "Impossibile riprodurre un file di testo senza video."
 # questo messaggio è stanissimo
 # Subpictures sono cose tipiche dei dvd (vedi google)
 # e sembra che non ci sia una traduzione in italiano
-#, fuzzy
 msgid "Can't display both text subtitles and subpictures."
-msgstr "Impossibile riprodurre sottotitoli di testo e subpicture."
+msgstr "Impossibile mostrare sottotitoli di testo e subpicture."
 
-#, fuzzy
+# sarebbe da controllare perché Temp è maiuscolo...
 msgid "No Temp directory specified."
-msgstr "Nessun device specificato."
+msgstr "Nessuna directory temporanea specificata."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Impossibile chiudere il file vfs «%s»."
+msgstr "Impossibile creare il file temporaneo «%s»."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Impossibile aprire il file «%s» in lettura."
 
-#, fuzzy
 msgid "Internal data flow error."
 msgstr "Errore interno nel flusso di dati."
 
@@ -539,6 +528,3 @@ msgstr "Il device «%s» è già in uso."
 #, c-format
 msgid "Could not open device \"%s\" for reading and writing."
 msgstr "Impossibile aprire il device «%s» in lettura e scrittura."
-
-#~ msgid "No file name specified."
-#~ msgstr "Nessun nome di file specificato."
