--- a/gst-plugins-base/po/pl.po
+++ b/gst-plugins-base/po/pl.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
+"Project-Id-Version: gst-plugins-base 0.10.24.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-09-17 00:08+0100\n"
-"PO-Revision-Date: 2009-04-16 21:39+0200\n"
+"POT-Creation-Date: 2009-10-01 16:27+0100\n"
+"PO-Revision-Date: 2009-09-17 18:51+0200\n"
 "Last-Translator: Jakub Bogusz <qboosh@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -131,9 +131,8 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "To wygląda na plik tekstowy"
 
-#, fuzzy
 msgid "Could not determine type of stream"
-msgstr "Nie udało się utworzyć elementu \"typefind\"."
+msgstr "Nie udało się określić typu strumienia"
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
@@ -185,21 +184,19 @@ msgstr "Brak elementu '%s' - proszę sprawdzić instalację GStreamera."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Nie ma żadnego z elementów autoaudiosink i alsasink."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are missing."
-msgstr "Nie ma żadnego z elementów autovideosink i xvimagesink."
+msgstr "Nie ma żadnego z elementów autovideosink i %s."
 
-#, fuzzy
 msgid "The autovideosink element is missing."
-msgstr "Nie ma żadnego z elementów autovideosink i xvimagesink."
+msgstr "Nie ma elementu autovideosink."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are not working."
-msgstr "Żaden z elementów autovideosink i xvimagesink nie działa."
+msgstr "Żaden z elementów autovideosink i %s nie działa."
 
-#, fuzzy
 msgid "The autovideosink element is not working."
-msgstr "Żaden z elementów autovideosink i xvimagesink nie działa."
+msgstr "Element autovideosink nie działa."
 
 msgid "Custom text sink element is not usable."
 msgstr "Własny element text sink nie jest użyteczny."
@@ -207,44 +204,39 @@ msgstr "Własny element text sink nie jest użyteczny."
 msgid "No volume control found"
 msgstr "Nie znaleziono sterowania głośnością"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are missing."
-msgstr "Nie ma żadnego z elementów autoaudiosink i alsasink."
+msgstr "Nie ma żadnego z elementów autoaudiosink i %s."
 
-#, fuzzy
 msgid "The autoaudiosink element is missing."
-msgstr "Nie ma żadnego z elementów autoaudiosink i alsasink."
+msgstr "Nie ma elementu autoaudiosink."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are not working."
-msgstr "Żaden z elementów autoaudiosink i alsasink nie działa."
+msgstr "Żaden z elementów autoaudiosink i %s nie działa."
 
-#, fuzzy
 msgid "The autoaudiosink element is not working."
-msgstr "Żaden z elementów autoaudiosink i alsasink nie działa."
+msgstr "Element autoaudiosink nie działa."
 
 msgid "Can't play a text file without video."
 msgstr "Nie można odtwarzać pliku tekstowego bez obrazu."
 
-#, fuzzy
 msgid "Can't display both text subtitles and subpictures."
-msgstr "Nie można odtwarzać podpisów tekstowych i podobrazów."
+msgstr "Nie można wyświetlać jednocześnie podpisów tekstowych i podobrazów."
 
-#, fuzzy
 msgid "No Temp directory specified."
-msgstr "Nie określono urządzenia."
+msgstr "Nie określono katalogu tymczasowego."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Nie udało się zamknąć pliku vfs \"%s\"."
+msgstr "Nie udało się utworzyć pliku tymczasowego \"%s\"."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Nie udało się otworzyć pliku \"%s\" do odczytu."
 
-#, fuzzy
 msgid "Internal data flow error."
-msgstr "Błąd wewnętrzny strumienia danych."
+msgstr "Błąd wewnętrzny przepływu danych."
 
 #, c-format
 msgid "No decoder available for type '%s'."
@@ -513,6 +505,3 @@ msgstr "Urządzenie \"%s\" jest już używane."
 #, c-format
 msgid "Could not open device \"%s\" for reading and writing."
 msgstr "Nie udało się otworzyć urządzenia \"%s\" do odczytu i zapisu."
-
-#~ msgid "No file name specified."
-#~ msgstr "Nie podano nazwy pliku."
