--- a/gst-plugins-base/po/sk.po
+++ b/gst-plugins-base/po/sk.po
@@ -1,13 +1,13 @@
 # Slovak translations for gst-plugins-base.
 # This file is put in the public domain.
 #
-# Peter Tuhársky <tuharsky@misbb.sk>, 2007, 2008.
+# Peter Tuhársky <tuharsky@misbb.sk>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.20.3\n"
+"Project-Id-Version: gst-plugins-base 0.10.24.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-09-17 00:08+0100\n"
-"PO-Revision-Date: 2008-09-25 09:59+0100\n"
+"POT-Creation-Date: 2009-10-01 16:27+0100\n"
+"PO-Revision-Date: 2009-09-21 09:53+0100\n"
 "Last-Translator: Peter Tuhársky <tuharsky@misbb.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -128,9 +128,8 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Tento súbor je asi textový"
 
-#, fuzzy
 msgid "Could not determine type of stream"
-msgstr "Nepodarilo sa vytvoriť prvok \"typefind\""
+msgstr "Nepodarilo sa zistiť typ prádu údajov"
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
@@ -182,21 +181,19 @@ msgstr "Chýa prvok '%s' - skontrolujte svoju inštaláciu GStreamer."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Chýbajú prvky autoaudiosink aj alsasink."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are missing."
-msgstr "Chýbajú prvky autovideosink aj xvimagesink."
+msgstr "Chýbajú prvky autovideosink aj %s."
 
-#, fuzzy
 msgid "The autovideosink element is missing."
-msgstr "Chýbajú prvky autovideosink aj xvimagesink."
+msgstr "Chýba prvok autovideosink."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are not working."
-msgstr "Chýbajú prvky autovideosink aj xvimagesink."
+msgstr "Nefungujú prvky autovideosink a %s."
 
-#, fuzzy
 msgid "The autovideosink element is not working."
-msgstr "Chýbajú prvky autovideosink aj xvimagesink."
+msgstr "Nefunguje prvok autovideosink."
 
 msgid "Custom text sink element is not usable."
 msgstr ""
@@ -204,41 +201,37 @@ msgstr ""
 msgid "No volume control found"
 msgstr "+Ziadny ovl8da4 hlasitosti sa nena3iel"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are missing."
-msgstr "Chýbajú prvky autoaudiosink aj alsasink."
+msgstr "Chýbajú prvky autoaudiosink aj %s."
 
-#, fuzzy
 msgid "The autoaudiosink element is missing."
-msgstr "Chýbajú prvky autoaudiosink aj alsasink."
+msgstr "Chýba prvok autoaudiosink."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are not working."
-msgstr "Chýbajú prvky autoaudiosink aj alsasink."
+msgstr "Nefungujú prvky autoaudiosink aj %s."
 
-#, fuzzy
 msgid "The autoaudiosink element is not working."
-msgstr "Chýbajú prvky autoaudiosink aj alsasink."
+msgstr "Nefunguje prvok autoaudiosink."
 
 msgid "Can't play a text file without video."
-msgstr ""
+msgstr "Nemôžem prehrať textový súbor bez videa."
 
 msgid "Can't display both text subtitles and subpictures."
-msgstr ""
+msgstr "Nemôžem zobrazovať naraz textové titulky aj podobrázky."
 
-#, fuzzy
 msgid "No Temp directory specified."
-msgstr "Nebolo zadané zariadenie."
+msgstr "Nebol zadaný dočasný adresár (Temp)."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Nepodarilo sa zatvoriť súbor \"%s\"."
+msgstr "Nepodarilo sa vytvoriť dočasný súbor \"%s\"."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Nepodarilo sa otvoriť súbor \"%s\" na čítanie."
 
-#, fuzzy
 msgid "Internal data flow error."
 msgstr "Vnútorná chyba prúdu údajov."
 
