--- a/gst-plugins-base/po/sv.po
+++ b/gst-plugins-base/po/sv.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
+"Project-Id-Version: gst-plugins-base 0.10.24.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-09-17 00:08+0100\n"
-"PO-Revision-Date: 2009-05-28 09:07+0100\n"
+"POT-Creation-Date: 2009-10-01 16:27+0100\n"
+"PO-Revision-Date: 2009-09-18 17:37+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -125,9 +125,8 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Den här ser ut att vara en textfil"
 
-#, fuzzy
 msgid "Could not determine type of stream"
-msgstr "Kunde inte skapa \"typefind\"-element."
+msgstr "Kunde inte fastställa typ av ström"
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
@@ -171,30 +170,28 @@ msgid "A subtitle stream was detected, but no video stream."
 msgstr "En undertextström identifierades men ingen videoström."
 
 msgid "Both autovideosink and xvimagesink elements are missing."
-msgstr "Både autovideosink- och xvimagesink-elementen saknas."
+msgstr "Både autovideosink- och xvimagesink-elementet saknas."
 
 #, c-format
 msgid "Missing element '%s' - check your GStreamer installation."
 msgstr "Saknar elementet \"%s\" - kontrollera din GStreamer-installation."
 
 msgid "Both autoaudiosink and alsasink elements are missing."
-msgstr "Både autoaudiosink- och alsasink-elementen saknas."
+msgstr "Både autoaudiosink- och alsasink-elementet saknas."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are missing."
-msgstr "Både autovideosink- och xvimagesink-elementen saknas."
+msgstr "Både autovideosink- och %s-elementet saknas."
 
-#, fuzzy
 msgid "The autovideosink element is missing."
-msgstr "Både autovideosink- och xvimagesink-elementen saknas."
+msgstr "Elementet autovideosink saknas."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are not working."
-msgstr "Varken autovideosink- och xvimagesink-elementen fungerar."
+msgstr "Det finns både autovideosink- och %s-element som inte fungerar."
 
-#, fuzzy
 msgid "The autovideosink element is not working."
-msgstr "Varken autovideosink- och xvimagesink-elementen fungerar."
+msgstr "Elementet autovideosink fungerar inte."
 
 msgid "Custom text sink element is not usable."
 msgstr "Anpassat text sink-element är inte användbart."
@@ -202,44 +199,39 @@ msgstr "Anpassat text sink-element är inte användbart."
 msgid "No volume control found"
 msgstr "Ingen volymkontroll hittades"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are missing."
-msgstr "Både autoaudiosink- och alsasink-elementen saknas."
+msgstr "Både autoaudiosink- och %s-elementet saknas."
 
-#, fuzzy
 msgid "The autoaudiosink element is missing."
-msgstr "Både autoaudiosink- och alsasink-elementen saknas."
+msgstr "Elementet autoaudiosink saknas."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are not working."
-msgstr "Varken autoaudiosink- och alsasink-elementen fungerar."
+msgstr "Det finns både autoaudiosink- och %s-element som inte fungerar.."
 
-#, fuzzy
 msgid "The autoaudiosink element is not working."
-msgstr "Varken autoaudiosink- och alsasink-elementen fungerar."
+msgstr "Elementet autoaudiosink fungerar inte."
 
 msgid "Can't play a text file without video."
 msgstr "Kan inte spela upp en textfil utan video."
 
-#, fuzzy
 msgid "Can't display both text subtitles and subpictures."
-msgstr "Kan inte spela upp en undertext och underbilder."
+msgstr "Kan inte visa både undertexter och underbilder."
 
-#, fuzzy
 msgid "No Temp directory specified."
-msgstr "Ingen enheten angiven."
+msgstr "Ingen temporärkatalog har angivits."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Kunde inte skriva till filen \"%s\"."
+msgstr "Kunde inte skapa temporärfilen \"%s\"."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Kunde inte öppna filen \"%s\" för läsning."
 
-#, fuzzy
 msgid "Internal data flow error."
-msgstr "Internt dataströmfel."
+msgstr "Internt dataflödesfel."
 
 #, c-format
 msgid "No decoder available for type '%s'."
