--- a/gst-plugins-base/po/tr.po
+++ b/gst-plugins-base/po/tr.po
@@ -3,10 +3,10 @@
 # Server Acim <serveracim@gmail.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
+"Project-Id-Version: gst-plugins-base 0.10.24.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-09-17 00:08+0100\n"
-"PO-Revision-Date: 2009-06-20 19:33+0200\n"
+"POT-Creation-Date: 2009-10-01 16:27+0100\n"
+"PO-Revision-Date: 2009-09-18 18:06+0200\n"
 "Last-Translator: Server Acim <serveracim@gmail.com>\n"
 "Language-Team: Turkish <gnu-tr-u12a@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -120,9 +120,8 @@ msgstr "Bir %s eklenti bu akışı çalmak için gerekli, fakat kurulu değil."
 msgid "This appears to be a text file"
 msgstr "Bu bir metin dosyasına benziyor"
 
-#, fuzzy
 msgid "Could not determine type of stream"
-msgstr "Bir \"typefind\" öğesi oluşturamıyor."
+msgstr "Akışın türü belirlenemiyor"
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
@@ -174,21 +173,19 @@ msgstr "Kayıp öğe '%s' - GStreamer kurulumunu denetleyin."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de kayıp."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are missing."
-msgstr "Autovideosink ve xvimagesink öğelerininin ikisi de kayıp."
+msgstr "Autovideosink ve xvimagesink %s öğelerininin ikisi de kayıp."
 
-#, fuzzy
 msgid "The autovideosink element is missing."
-msgstr "Autovideosink ve xvimagesink öğelerininin ikisi de kayıp."
+msgstr "Autovideosink öğelesi kayıp."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autovideosink and %s elements are not working."
-msgstr "Autoaudiosink ve xvimagesink öğelerinin ikisi de çalışmıyor."
+msgstr "Autoaudiosink ve xvimagesink %s öğelerinin ikisi de çalışmıyor."
 
-#, fuzzy
 msgid "The autovideosink element is not working."
-msgstr "Autoaudiosink ve xvimagesink öğelerinin ikisi de çalışmıyor."
+msgstr "Autoaudiosink öğesi çalışmıyor."
 
 msgid "Custom text sink element is not usable."
 msgstr "Varsayılan metin gömme öğesi kullanılamaz durumda."
@@ -196,42 +193,37 @@ msgstr "Varsayılan metin gömme öğesi kullanılamaz durumda."
 msgid "No volume control found"
 msgstr "Ses denetimi bulunamadı"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are missing."
-msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de kayıp."
+msgstr "Autoaudiosink ve alsasink %s öğelerinin ikisi de kayıp."
 
-#, fuzzy
 msgid "The autoaudiosink element is missing."
-msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de kayıp."
+msgstr "Autoaudiosink öğesi kayıp."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Both autoaudiosink and %s elements are not working."
-msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de çalışmıyor."
+msgstr "Autoaudiosink ve %s öğelerinin ikisi de çalışmıyor."
 
-#, fuzzy
 msgid "The autoaudiosink element is not working."
-msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de çalışmıyor."
+msgstr "Autoaudiosink öğesi çalışmıyor."
 
 msgid "Can't play a text file without video."
 msgstr "Vidyo olmadan metin dosyasını oynatamaz."
 
-#, fuzzy
 msgid "Can't display both text subtitles and subpictures."
-msgstr "Metin altyazılarını altgörüntülerini oynatamaz."
+msgstr "Metin altyazılarını altgörüntülerini oynatamıyor."
 
-#, fuzzy
 msgid "No Temp directory specified."
-msgstr "Aygıt belirtilmedi."
+msgstr "Geçici Temp dizini belirtilmedi."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Vfs dosyası kapatılamıyor \"%s\"."
+msgstr "Geçici dosya oluşturulamıyor \"%s\"."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Dosyayı \"%s\" okumak için açamıyor."
 
-#, fuzzy
 msgid "Internal data flow error."
 msgstr "İç veri akışı hatası."
 
