--- a/gstreamer/po/az.po
+++ b/gstreamer/po/az.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer-0.8.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-10-05 12:38+0100\n"
+"POT-Creation-Date: 2009-10-07 00:46+0100\n"
 "PO-Revision-Date: 2004-03-19 18:40+0200\n"
 "Last-Translator: Metin Amiroff <metin@karegen.com>\n"
 "Language-Team: Azerbaijani <translation-team-az@lists.sourceforge.net>\n"
@@ -69,7 +69,7 @@ msgstr ""
 msgid "Disable updating the registry"
 msgstr ""
 
-msgid "Disable the use of fork() while scanning the registry"
+msgid "Disable spawning a helper process while scanning the registry"
 msgstr ""
 
 msgid "GStreamer Options"
@@ -78,18 +78,6 @@ msgstr ""
 #, fuzzy
 msgid "Show GStreamer Options"
 msgstr "GStreamer buraxılışını göstər"
-
-#, c-format
-msgid "Error writing registry cache to %s: %s"
-msgstr ""
-
-#, c-format
-msgid "Error re-scanning registry %s: %s"
-msgstr ""
-
-#, c-format
-msgid "Error re-scanning registry %s"
-msgstr ""
 
 msgid "Unknown option"
 msgstr ""
@@ -762,12 +750,27 @@ msgstr ""
 msgid "controllable"
 msgstr ""
 
+msgid "Blacklisted files:"
+msgstr ""
+
 msgid "Total count: "
 msgstr ""
 
 #, c-format
+msgid "%d blacklisted file"
+msgid_plural "%d blacklisted files"
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
 msgid "%d plugin"
 msgid_plural "%d plugins"
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "%d blacklist entry"
+msgid_plural "%d blacklist entries"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -778,6 +781,9 @@ msgstr[0] ""
 msgstr[1] ""
 
 msgid "Print all elements"
+msgstr ""
+
+msgid "Print list of blacklisted files"
 msgstr ""
 
 msgid ""
