--- a/gstreamer/po/be.po
+++ b/gstreamer/po/be.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.9.7\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-10-05 12:38+0100\n"
+"POT-Creation-Date: 2009-10-07 00:46+0100\n"
 "PO-Revision-Date: 2006-01-18 22:26+0200\n"
 "Last-Translator: Ales Nyakhaychyk <nab@mail.by>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
@@ -72,25 +72,13 @@ msgstr ""
 msgid "Disable updating the registry"
 msgstr ""
 
-msgid "Disable the use of fork() while scanning the registry"
+msgid "Disable spawning a helper process while scanning the registry"
 msgstr ""
 
 msgid "GStreamer Options"
 msgstr ""
 
 msgid "Show GStreamer Options"
-msgstr ""
-
-#, c-format
-msgid "Error writing registry cache to %s: %s"
-msgstr ""
-
-#, c-format
-msgid "Error re-scanning registry %s: %s"
-msgstr ""
-
-#, c-format
-msgid "Error re-scanning registry %s"
 msgstr ""
 
 msgid "Unknown option"
@@ -769,13 +757,28 @@ msgstr "загаловак"
 msgid "controllable"
 msgstr ""
 
+msgid "Blacklisted files:"
+msgstr ""
+
 #, fuzzy
 msgid "Total count: "
 msgstr "колькасьць запісаў"
 
 #, c-format
+msgid "%d blacklisted file"
+msgid_plural "%d blacklisted files"
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
 msgid "%d plugin"
 msgid_plural "%d plugins"
+msgstr[0] ""
+msgstr[1] ""
+
+#, c-format
+msgid "%d blacklist entry"
+msgid_plural "%d blacklist entries"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -786,6 +789,9 @@ msgstr[0] ""
 msgstr[1] ""
 
 msgid "Print all elements"
+msgstr ""
+
+msgid "Print list of blacklisted files"
 msgstr ""
 
 msgid ""
