--- a/gstreamer/po/ru.po
+++ b/gstreamer/po/ru.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.21.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-10-05 12:38+0100\n"
+"POT-Creation-Date: 2009-10-07 00:46+0100\n"
 "PO-Revision-Date: 2009-02-12 14:17+0200\n"
 "Last-Translator: Pavel Maryanov <acid_jack@ukr.net>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
@@ -77,7 +77,8 @@ msgstr "Отключить перехват ошибок сегментации 
 msgid "Disable updating the registry"
 msgstr "Отключить обновление реестра"
 
-msgid "Disable the use of fork() while scanning the registry"
+#, fuzzy
+msgid "Disable spawning a helper process while scanning the registry"
 msgstr "Запретить использование fork(), пока происходит сканирование реестра"
 
 msgid "GStreamer Options"
@@ -85,18 +86,6 @@ msgstr "Параметры GStreamer"
 
 msgid "Show GStreamer Options"
 msgstr "Показать параметры GStreamer"
-
-#, c-format
-msgid "Error writing registry cache to %s: %s"
-msgstr "Ошибка записи кэша реестра в %s: %s"
-
-#, c-format
-msgid "Error re-scanning registry %s: %s"
-msgstr "Ошибка повторного сканирования реестра %s: %s"
-
-#, c-format
-msgid "Error re-scanning registry %s"
-msgstr "Ошибка повторного сканирования реестра %s"
 
 msgid "Unknown option"
 msgstr "Неизвестный параметр"
@@ -795,8 +784,18 @@ msgstr "записываемый"
 msgid "controllable"
 msgstr "котролируемый"
 
+msgid "Blacklisted files:"
+msgstr ""
+
 msgid "Total count: "
 msgstr "Общее количество: "
+
+#, c-format
+msgid "%d blacklisted file"
+msgid_plural "%d blacklisted files"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
 #, c-format
 msgid "%d plugin"
@@ -804,6 +803,13 @@ msgid_plural "%d plugins"
 msgstr[0] "%d plugin"
 msgstr[1] "%d модуля"
 msgstr[2] "%d модулей"
+
+#, c-format
+msgid "%d blacklist entry"
+msgid_plural "%d blacklist entries"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
 #, c-format
 msgid "%d feature"
@@ -814,6 +820,9 @@ msgstr[2] "%d функций"
 
 msgid "Print all elements"
 msgstr "Вывести все элементы"
+
+msgid "Print list of blacklisted files"
+msgstr ""
 
 msgid ""
 "Print a machine-parsable list of features the specified plugin provides.\n"
@@ -1029,6 +1038,15 @@ msgstr "Установка конвейера в состояние NULL...\n"
 #, fuzzy
 msgid "Freeing pipeline ...\n"
 msgstr "Установка конвейера в состояние NULL...\n"
+
+#~ msgid "Error writing registry cache to %s: %s"
+#~ msgstr "Ошибка записи кэша реестра в %s: %s"
+
+#~ msgid "Error re-scanning registry %s: %s"
+#~ msgstr "Ошибка повторного сканирования реестра %s: %s"
+
+#~ msgid "Error re-scanning registry %s"
+#~ msgstr "Ошибка повторного сканирования реестра %s"
 
 #~ msgid "Internal GStreamer error: state change failed."
 #~ msgstr "Внутренняя ошибка GStreamer: не удалось сменить состояние."
