--- a/gstreamer/po/zh_TW.po
+++ b/gstreamer/po/zh_TW.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.8.8\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-10-05 12:38+0100\n"
+"POT-Creation-Date: 2009-10-07 00:46+0100\n"
 "PO-Revision-Date: 2005-04-27 14:55+0800\n"
 "Last-Translator: Abel Cheung <abelcheung@gmail.com>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
@@ -74,7 +74,7 @@ msgstr "載入增效模組時不攔截程式區段碼錯誤"
 msgid "Disable updating the registry"
 msgstr ""
 
-msgid "Disable the use of fork() while scanning the registry"
+msgid "Disable spawning a helper process while scanning the registry"
 msgstr ""
 
 msgid "GStreamer Options"
@@ -83,18 +83,6 @@ msgstr ""
 #, fuzzy
 msgid "Show GStreamer Options"
 msgstr "顯示 GStreamer 版本"
-
-#, c-format
-msgid "Error writing registry cache to %s: %s"
-msgstr ""
-
-#, c-format
-msgid "Error re-scanning registry %s: %s"
-msgstr ""
-
-#, c-format
-msgid "Error re-scanning registry %s"
-msgstr ""
 
 msgid "Unknown option"
 msgstr ""
@@ -793,13 +781,26 @@ msgstr "標題"
 msgid "controllable"
 msgstr ""
 
+msgid "Blacklisted files:"
+msgstr ""
+
 #, fuzzy
 msgid "Total count: "
 msgstr "音軌總數"
 
 #, c-format
+msgid "%d blacklisted file"
+msgid_plural "%d blacklisted files"
+msgstr[0] ""
+
+#, c-format
 msgid "%d plugin"
 msgid_plural "%d plugins"
+msgstr[0] ""
+
+#, c-format
+msgid "%d blacklist entry"
+msgid_plural "%d blacklist entries"
 msgstr[0] ""
 
 #, fuzzy, c-format
@@ -809,6 +810,9 @@ msgstr[0] "功能"
 
 msgid "Print all elements"
 msgstr "顯示所有元件"
+
+msgid "Print list of blacklisted files"
+msgstr ""
 
 msgid ""
 "Print a machine-parsable list of features the specified plugin provides.\n"
